--- a/styles/6statistics.css
+++ b/styles/6statistics.css
@@ -39,3 +39,92 @@
     text-align: center;
     color: #FFFFFF;
 }
+
+@media only screen and (min-width: 576px) and (max-width: 991px) {
+    .result {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .happy-clients,
+    .proj-completed,
+    .dedicated-staff,
+    .dedicated-staff2 {
+        text-align: center;
+        width: 100%;
+        gap: 12px;
+    }
+
+    .statistics {
+        width: 100%;
+        padding: 10px;
+        background-color: #355EFC;
+
+    }
+
+    .statistics p {
+        font-family: Poppins;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        text-align: center;
+        color: #FFFFFF;
+
+    }
+
+    .statistics h1 {
+        font-family: Poppins;
+        font-size: 56px;
+        font-weight: 700;
+        line-height: 67px;
+        letter-spacing: 0em;
+        text-align: center;
+        color: #FFFFFF;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .result {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .happy-clients,
+    .proj-completed,
+    .dedicated-staff,
+    .dedicated-staff2 {
+        text-align: center;
+        width: 100%;
+        gap: 12px;
+    }
+
+    .statistics {
+        width: 100%;
+        padding: 10px;
+        background-color: #355EFC;
+    }
+
+    .statistics p {
+        font-family: Poppins;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        text-align: center;
+        color: #FFFFFF;
+
+    }
+
+    .statistics h1 {
+        font-family: Poppins;
+        font-size: 56px;
+        font-weight: 700;
+        line-height: 67px;
+        letter-spacing: 0em;
+        text-align: center;
+        color: #FFFFFF;
+    }
+}
