--- a/styles/1header.css
+++ b/styles/1header.css
@@ -109,3 +109,172 @@ body {
     line-height: normal;
     width: max-content;
 }
+
+@media only screen and (min-width: 576px) and (max-width: 991px) {
+    body {
+        width: 100%;
+    }
+
+    .infocontainer {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 10px;
+        gap: 10%;
+        padding: 0 10%;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.01);
+        box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.11);
+    }
+
+    .headerinfo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 7px;
+    }
+
+    .location {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 7px;
+
+    }
+
+    .location h5 {
+        color: var(--main-color, #355EFC);
+        font-family: "Open Sans";
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 200;
+        line-height: normal;
+        width: max-content;
+
+    }
+
+    .headerinfo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+    }
+
+    .location {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+
+    }
+
+    .location h5 {
+        color: var(--main-color, #355EFC);
+        font-family: "Open Sans";
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 200;
+        line-height: normal;
+        width: max-content;
+
+    }
+
+    .active {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 8px;
+        flex-shrink: 0;
+        align-self: stretch;
+    }
+
+    .active h5 {
+        color: var(--main-color, #355EFC);
+        font-family: "Open Sans";
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 200;
+        line-height: normal;
+    }
+
+    .contact {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .email {
+        display: flex;
+        gap: 5px;
+    }
+
+    .email h5 {
+        display: flex;
+        color: var(--main-color, #355EFC);
+        font-family: "Open Sans";
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 200;
+        line-height: normal;
+    }
+
+    .phone {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .phone h5 {
+        color: var(--main-color, #355EFC);
+        font-family: "Open Sans";
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 200;
+        line-height: normal;
+        width: max-content;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+
+    body {
+        width: 100%;
+    }
+
+    .infocontainer {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        align-items: center;
+        font-size: 8px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.01);
+        box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.11);
+    }
+
+    .headerinfo {
+        display: flex;
+    }
+
+    .contact,
+    .headerinfo {
+        gap: 30px;
+    }
+
+    .location h5 {
+        display: none;
+
+    }
+
+    .active h5 {
+        display: none;
+    }
+
+    .email h5 {
+        display: none;
+    }
+
+    .phone h5 {
+        display: none;
+    }
+}
