--- a/styles/2navigation.css
+++ b/styles/2navigation.css
@@ -37,3 +37,103 @@
     font-weight: 700;
     line-height: normal;
 }
+
+@media only screen and (min-width: 576px) and (max-width: 991px) {
+    .navigation {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 30px;
+    }
+
+    .websitename h1 {
+        color: var(--main-color, #355EFC);
+        text-align: center;
+        font-family: "Jost";
+        font-size: 48px;
+        font-style: normal;
+        line-height: 40px;
+        padding-right: 200px;
+    }
+
+    .menu {
+        margin-left: -33%;
+    }
+
+    .menu ul {
+        display: flex;
+        width: 300px;
+        align-items: center;
+        gap: 10px;
+        list-style-type: none;
+    }
+
+    .menu li {
+        color: var(--main-color, #355EFC);
+        text-align: center;
+        font-family: "Poppins";
+        font-size: 13px;
+        font-style: normal;
+        line-height: normal;
+    }
+
+    .socmedia {
+        display: flex;
+        flex-direction: column;
+        padding-top: 3px;
+        padding-right: 10px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .navigation {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 30px;
+    }
+
+    .websitename h1 {
+        color: var(--main-color, #355EFC);
+        width: 50px;
+        padding-top: 10px;
+        margin: 0 auto;
+        text-align: center;
+        font-family: "Jost";
+        font-size: 48px;
+        font-style: normal;
+        line-height: 40px;
+        padding-right: 100px;
+    }
+
+    .menu {
+        margin-left: 7%;
+    }
+
+    .menu ul {
+        display: flex;
+        flex-direction: column;
+        width: 100px;
+        align-items: center;
+        gap: 7px;
+        list-style-type: none;
+        padding-top: 5px;
+        margin: 0 auto;
+    }
+
+    .menu li {
+        color: var(--main-color, #355EFC);
+        text-align: center;
+        font-family: "Poppins";
+        font-size: 13px;
+        font-style: normal;
+        line-height: normal;
+    }
+
+    .socmedia {
+        display: flex;
+        padding-top: 15px;
+        padding-left: 6%;
+    }
+}
