--- a/styles/3slider.css
+++ b/styles/3slider.css
@@ -51,3 +51,115 @@
     line-height: 24px;
     border: none;
 }
+
+@media only screen and (min-width: 576px) and (max-width: 991px) {
+    .welcometo {
+        display: flex;
+        flex-direction: column;
+        align-items: first baseline;
+        gap: 25px;
+        padding: 0 30px;
+        padding-top: 50px;
+    }
+
+    .welcometo button {
+        display: flex;
+        padding: 10px;
+        align-items: flex-start;
+        gap: 8px;
+        border-radius: 8px;
+        border: 1px solid #FFF;
+        color: var(--main-color, #355EFC);
+        text-align: center;
+        text-decoration: none;
+        background-color: #DEE2FB;
+        font-family: "Poppins";
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 200;
+        line-height: 20px;
+    }
+
+    .welcometo h1 {
+        color: #011A41;
+        font-family: "Open Sans";
+        font-size: 80px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 96px;
+        width: 100%;
+    }
+
+    .welcometo .exploremore {
+        display: flex;
+        padding: 10px 20px;
+        align-items: flex-start;
+        gap: 8px;
+        border-radius: 10px;
+        background: var(--main-color, #355EFC);
+        color: #F5F5F5;
+        font-family: "Open Sans";
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 20px;
+        border: none;
+    }
+}
+
+
+@media only screen and (max-width: 576px) {
+    .welcometo {
+        display: flex;
+        flex-direction: column;
+        align-items: first baseline;
+        width: 100%;
+        gap: 20px;
+        padding: 0 30px;
+        padding-top: 50px;
+    }
+
+    .welcometo button {
+        display: flex;
+        padding: 10px;
+        align-items: flex-start;
+        gap: 8px;
+        border-radius: 8px;
+        border: 1px solid #FFF;
+        color: var(--main-color, #355EFC);
+        text-align: center;
+        text-decoration: none;
+        background-color: #DEE2FB;
+        font-family: "Poppins";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 25px;
+    }
+
+    .welcometo h1 {
+        width: 100%;
+        color: #011A41;
+        font-family: "Open Sans";
+        font-size: 35px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 55px;
+    }
+
+    .welcometo .exploremore {
+        display: flex;
+        padding: 10px 20px;
+        align-items: flex-start;
+        gap: 8px;
+        border-radius: 10px;
+        background: var(--main-color, #355EFC);
+        color: #F5F5F5;
+        font-family: "Open Sans";
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 20px;
+        border: none;
+    }
+}
