--- a/styles/4aboutus.css
+++ b/styles/4aboutus.css
@@ -58,3 +58,129 @@
     display: flex;
     justify-content: center;
 }
+
+@media only screen and (min-width: 576px) and (max-width: 991px) {
+
+    .growbussiness {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 0 30px;
+        margin-top: 40px;
+        gap: 15px;
+    }
+
+    .growbussiness img {
+        max-width: 100%;
+        height: auto;
+        padding: 40px 90px 40px 60px;
+    }
+
+    .aboutcomponent {
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+        gap: 15px;
+    }
+
+    .aboutcomponent button {
+        display: flex;
+        padding: 10px 15px;
+        justify-content: center;
+        align-items: center;
+        gap: 6px;
+        border-radius: 11px;
+        border: 1px solid #CAD2FC;
+        box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.36);
+        color: var(--main-color, #355EFC);
+        font-family: "Open Sans";
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    .aboutcomponent h1 {
+        width: 100%;
+        height: 116px;
+        color: var(--Heading-color, #011A41);
+        font-family: Jost;
+        font-size: 48px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 58px;
+    }
+
+    .aboutcomponent p {
+        color: var(--small-text-color, #555);
+        font-family: "Poppins";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px;
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .growbussiness {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 0 30px;
+        margin-top: 40px;
+        gap: 15px;
+    }
+
+    .growbussiness img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .aboutcomponent {
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+        width: 100%;
+        gap: 15px;
+    }
+
+    .aboutcomponent button {
+        display: flex;
+        padding: 10px 15px;
+        justify-content: center;
+        align-items: center;
+        gap: 3px;
+        border-radius: 11px;
+        border: 1px solid #CAD2FC;
+        box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.36);
+        color: var(--main-color, #355EFC);
+        font-family: "Open Sans";
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    .aboutcomponent h1 {
+        width: 100%;
+        height: auto;
+        color: var(--Heading-color, #011A41);
+        font-family: Jost;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 40px;
+    }
+
+    .aboutcomponent p {
+        width: 100%;
+        color: var(--small-text-color, #555);
+        font-family: "Poppins";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px;
+
+    }
+}
