--- a/styles/8ourservices.css
+++ b/styles/8ourservices.css
@@ -156,3 +156,314 @@
     border: none;
     background: none;
 }
+
+@media only screen and (min-width: 576px) and (max-width: 991px) {
+    .services-header {
+        width: 100%;
+        margin-top: 98px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 64px;
+    }
+
+    .services-header button {
+        width: 142px;
+        height: 42px;
+        top: 2561px;
+        left: 549px;
+        padding: 10px, 15px, 10px, 15px;
+        border-radius: 11px;
+        gap: 10px;
+        background: #FFFFFF;
+        color: #355EFC;
+        border: 1px solid #CAD2FC;
+        box-shadow: 0px 0px 4px 0px #0000005C;
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: 0em;
+        cursor: pointer;
+    }
+
+    .services-header h1 {
+        color: #011A41;
+        font-family: Jost;
+        font-size: 48px;
+        font-weight: 700;
+        line-height: 58px;
+        letter-spacing: 0em;
+        text-align: center;
+        margin: 0 auto;
+    }
+
+    .services {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 23px;
+        width: 100%;
+        padding: 0 72px;
+    }
+
+    .planing {
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+    }
+
+    .planing button {
+        width: 355px;
+        height: 72px;
+        padding: 20px;
+        border-radius: 10px;
+        border: 1px solid #909DE2;
+        gap: 15px;
+        font-family: Open Sans;
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+        display: flex;
+        align-items: center;
+        background-color: #FFFFFF;
+    }
+
+    .planing button:first-child {
+        background: #355EFC;
+        color: #FFFFFF;
+    }
+
+    .services img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .experience {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 32px;
+        width: 100%
+    }
+
+    .experience .read-more {
+        width: Hug (136px);
+        height: Hug (44px);
+        padding: 10px, 25px, 10px, 25px;
+        border-radius: 10px;
+        gap: 10px;
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 24px;
+        letter-spacing: 0em;
+        background: #355EFC;
+        color: #FFFFFF;
+        cursor: pointer;
+    }
+
+    .experience h1 {
+        font-family: Jost;
+        font-size: 28px;
+        font-weight: 700;
+        line-height: 34px;
+        letter-spacing: 0em;
+        text-align: left;
+
+    }
+
+    .experience p {
+        width: 100%;
+        height: 72px;
+        font-family: Poppins;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: center;
+    }
+
+    .services-list {
+        display: flex;
+        flex-direction: column;
+        width: 183px;
+        height: 106px;
+        gap: 17px;
+    }
+
+    .experience .services-list h4 {
+        font-family: Poppins;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+    }
+
+    .experience button {
+        width: 136px;
+        height: 44px;
+        padding: 10px, 25px, 10px, 25px;
+        border-radius: 10px;
+        gap: 10px;
+        background: #355EFC;
+        border: none;
+        background: none;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+
+    .services-header {
+        width: 100%;
+        margin-top: 98px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 64px;
+    }
+
+    .services-header button {
+        width: 142px;
+        height: 42px;
+        top: 2561px;
+        left: 549px;
+        padding: 10px, 15px, 10px, 15px;
+        border-radius: 11px;
+        gap: 10px;
+        background: #FFFFFF;
+        color: #355EFC;
+        border: 1px solid #CAD2FC;
+        box-shadow: 0px 0px 4px 0px #0000005C;
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: 0em;
+        cursor: pointer;
+    }
+
+    .services-header h1 {
+        width: 100%;
+        color: #011A41;
+        font-family: Jost;
+        font-size: 48px;
+        font-weight: 700;
+        line-height: 58px;
+        letter-spacing: 0em;
+        text-align: center;
+        margin: 0 auto;
+        gap: 20px;
+    }
+
+    .services {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 23px;
+        width: 100%;
+        padding: 0 72px;
+    }
+
+    .planing {
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+    }
+
+    .planing button {
+        width: 355px;
+        height: 72px;
+        padding: 20px;
+        border-radius: 10px;
+        border: 1px solid #909DE2;
+        gap: 15px;
+        font-family: Open Sans;
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+        display: flex;
+        align-items: center;
+        background-color: #FFFFFF;
+    }
+
+    .planing button:first-child {
+        background: #355EFC;
+        color: #FFFFFF;
+    }
+
+    .services img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .experience {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 32px;
+        width: 100%
+    }
+
+    .experience h1 {
+        font-family: Jost;
+        font-size: 28px;
+        font-weight: 700;
+        line-height: 34px;
+        letter-spacing: 0em;
+        text-align: left;
+        text-align: center;
+
+    }
+
+    .experience p {
+        width: 100%;
+        height: auto;
+        font-family: Poppins;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: center;
+    }
+
+    .services-list {
+        display: flex;
+        flex-direction: column;
+        width: 183px;
+        height: 106px;
+        gap: 17px;
+    }
+
+    .experience .services-list h4 {
+        font-family: Poppins;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+    }
+
+    .experience .read-more {
+        width: 136px;
+        height: 44px;
+        padding: 10px, 25px, 10px, 25px;
+        border-radius: 10px;
+        gap: 10px;
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 24px;
+        letter-spacing: 0em;
+        background: #355EFC;
+        color: #FFFFFF;
+        cursor: pointer;
+    }
+}
