--- a/styles/9callback.css
+++ b/styles/9callback.css
@@ -112,7 +112,19 @@
 
 }
 
-.submit {
+
+.valid {
+    display: flex;
+    flex-direction: column;
+}
+
+.mail-message,
+.subject-message,
+.phone-message {
+    color: red;
+}
+
+.form-container button {
     width: 619px;
     height: 49px;
     padding: 10px, 25px, 10px, 25px;
@@ -127,4 +139,251 @@
     color: #FFFFFF;
     border: none;
     cursor: pointer;
+}
+
+@media only screen and (min-width: 576px) and (max-width: 991px) {
+
+    .call-back {
+        top: 96%;
+        left: 0;
+        right: 0;
+        margin: auto;
+        display: flex;
+        z-index: 1;
+        flex-direction: column;
+        align-items: center;
+        width: 70%;
+        height: auto;
+        padding: 50px;
+        border-radius: 10px;
+        gap: 20px;
+        border: 1px solid #909DE2;
+        background-color: #FFFFFF;
+    }
+
+    .form-input {
+        width: 298px;
+        height: 52px;
+        padding: 15px, 1px, 15px, 10px;
+        border-radius: 5px;
+        border: 1px solid #909DE2;
+        gap: 10px;
+        padding: 10px;
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+
+    }
+
+    #textarea {
+        width: 100%;
+        padding: 10px;
+        border-radius: 10px;
+        border: 1px solid #909DE2;
+        gap: 20px;
+        resize: none;
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+    }
+
+    .form-container {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 20px;
+
+    }
+
+    .name-email,
+    .phone-number {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 23px;
+    }
+
+    .blue {
+        margin-top: 85px;
+        width: 100%;
+        height: 346px;
+        background-color: #355EFC;
+    }
+
+    .get-in-touch {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .get-in-touch button {
+        width: 125px;
+        height: 42px;
+        border-radius: 11px;
+        gap: 10px;
+        background-color: #FFFFFF;
+        border: 1px solid #CAD2FC;
+        color: #355EFC;
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: 0em;
+        box-shadow: 0px 0px 4px 0px #0000005C;
+        cursor: pointer;
+    }
+
+    .form-container button {
+        width: 100%;
+        height: 49px;
+
+        border-radius: 5px;
+        gap: 10px;
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 24px;
+        letter-spacing: 0em;
+        background-color: #355EFC;
+        color: #FFFFFF;
+        border: none;
+        cursor: pointer;
+    }
+
+    .form-container {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 20px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .call-back {
+        top: 96%;
+        left: 0;
+        right: 0;
+        margin: auto;
+        display: flex;
+        z-index: 1;
+        flex-direction: column;
+        align-items: center;
+        width: 70%;
+        height: auto;
+        padding: 50px;
+        border-radius: 10px;
+        gap: 20px;
+        border: 1px solid #909DE2;
+        background-color: #FFFFFF;
+    }
+
+    .form-input {
+        width: 100%;
+        height: auto;
+        padding: 15px, 1px, 15px, 10px;
+        border-radius: 5px;
+        border: 1px solid #909DE2;
+        gap: 10px;
+        padding: 10px;
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+
+    }
+
+    #textarea {
+        width: 100%;
+        padding: 10px;
+        border-radius: 10px;
+        border: 1px solid #909DE2;
+        gap: 20px;
+        resize: none;
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+    }
+
+    .form-container {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 20px;
+
+    }
+
+    .name-email,
+    .phone-number {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 23px;
+    }
+
+    .blue {
+        margin-top: 85px;
+        width: 100%;
+        height: 346px;
+        background-color: #355EFC;
+    }
+
+    .get-in-touch {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 20px;
+    }
+
+    .get-in-touch button {
+        width: 125px;
+        height: 42px;
+        border-radius: 11px;
+        gap: 10px;
+        background-color: #FFFFFF;
+        border: 1px solid #CAD2FC;
+        color: #355EFC;
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: 0em;
+        box-shadow: 0px 0px 4px 0px #0000005C;
+        cursor: pointer;
+    }
+
+    .form-container button {
+        width: 100%;
+        height: 49px;
+        border-radius: 5px;
+        gap: 10px;
+        font-family: Open Sans;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 24px;
+        letter-spacing: 0em;
+        background-color: #355EFC;
+        color: #FFFFFF;
+        border: none;
+        cursor: pointer;
+    }
+
 }
