--- a/styles/why.css
+++ b/styles/why.css
@@ -172,6 +172,9 @@
     margin-left: 11px;
     margin-right: 80px;
 }
+#text {
+    display: none;
+  }
 
 @media only screen and (min-width: 576px) and (max-width: 991px) {
 
